--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta property="og:url" content="https://mo100.luvle.kr" />
   <meta property="og:title" content="도윤 ♥ 가희의 결혼식에 초대합니다." />
   <meta property="og:description" content="2025년 9월 14일 일요일♡" />
-  <meta property="og:image" content="https://i.imgur.com/2aNBVpN.png" />
+  <meta property="og:image" content="https://imgur.com/a/C6TNUkD" />
   <meta property="og:site_name" content="도윤 ♥ 가희의 결혼식에 초대합니다." />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" type="text/css" href="style.css" />
